--- a/index.html
+++ b/index.html
@@ -278,8 +278,10 @@
 
     <section class="contact" id="contact">
   <h2 class="section-title">Let’s Collaborate</h2>
-  <div style="text-align: center;">
-    <a href="mailto:marvihajdari@arsovia.com" class="btn">Email Us at marvihajdari@arsovia.com</a>
+  <div style="max-width: 600px; margin: 0 auto; text-align: center;">
+    <a href="mailto:marvihajdari@arsovia.com?subject=Project Inquiry from Arsovia Website" class="btn" style="display: inline-block; width: 100%;">
+      Send Message
+    </a>
   </div>
 </section>
   </main>
