--- a/index.html
+++ b/index.html
@@ -240,8 +240,7 @@
       </h1>
       <p>
         <span>At Arsovia, we build enduring brand systems</span><br>
-        <span>for founders and teams who value clarity,</span><br>
-        <span>simplicity, and long-term identity.</span>
+        <span>for founders and teams who value clarity,simplicity, and long-term identity.</span>
       </p>
       <a class="btn" href="#contact">Start Your Vision</a>
     </section>
