--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
         <span>With Substance</span>
       </h1>
       <p>
-        <span>At Arsovia, we build enduring brand systems</span><br>
-        <span>for founders and teams who value clarity,simplicity, and long-term identity.</span>
+        <span>At Arsovia, we build enduring brand systems for founders and teams</span><br>
+        <span>who value clarity,simplicity, and long-term identity.</span>
       </p>
       <a class="btn" href="#contact">Start Your Vision</a>
     </section>
