--- a/index.html
+++ b/index.html
@@ -246,22 +246,35 @@
     </section>
 
     <section class="services" id="services">
-      <h2 class="section-title">What We Do</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Strategy</h3>
-          <p>Define your voice, values, and purpose. We shape foundational clarity that scales.</p>
-        </div>
-        <div class="card">
-          <h3>Identity</h3>
-          <p>Minimalist, timeless visual systems tailored to your market and message.</p>
-        </div>
-        <div class="card">
-          <h3>Digital</h3>
-          <p>UX-first, content-aware websites that turn perception into action.</p>
-        </div>
-      </div>
-    </section>
+  <h2 class="section-title">Design Services</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>Brand Identity</h3>
+      <p>Logo design, typography, color systems, and brand guidelines that establish a strong visual presence.</p>
+    </div>
+    <div class="card">
+      <h3>Web & UI Design</h3>
+      <p>Modern, responsive interfaces for websites, apps, and platforms—designed with user experience at the core.</p>
+    </div>
+    <div class="card">
+      <h3>Social Media Design</h3>
+      <p>Custom visuals, templates, and campaign graphics tailored for Instagram, Facebook, LinkedIn, and more.</p>
+    </div>
+    <div class="card">
+      <h3>Print Design</h3>
+      <p>Posters, flyers, business cards, brochures, and packaging—everything ready for high-quality print production.</p>
+    </div>
+    <div class="card">
+      <h3>Presentation Design</h3>
+      <p>Branded PowerPoint, Keynote, and PDF decks that communicate your ideas clearly and visually.</p>
+    </div>
+    <div class="card">
+      <h3>Motion Graphics</h3>
+      <p>Animated visuals, logo reveals, and explainer videos that add energy and clarity to your content.</p>
+    </div>
+  </div>
+</section>
+
 
     <section class="projects" id="projects">
       <h2 class="section-title">Selected Work</h2>
