--- a/index.html
+++ b/index.html
@@ -246,31 +246,43 @@
     </section>
 
     <section class="services" id="services">
-  <h2 class="section-title">Design Services</h2>
+  <h2 class="section-title">Creative & Design Services</h2>
   <div class="grid">
     <div class="card">
       <h3>Brand Identity</h3>
-      <p>Logo design, typography, color systems, and brand guidelines that establish a strong visual presence.</p>
+      <p>Logos, color palettes, typography, and complete brand systems that define your visual language and leave a lasting impression.</p>
     </div>
     <div class="card">
-      <h3>Web & UI Design</h3>
-      <p>Modern, responsive interfaces for websites, apps, and platforms—designed with user experience at the core.</p>
+      <h3>Web & UI/UX Design</h3>
+      <p>Responsive websites and app interfaces crafted with seamless user experiences, accessibility, and interaction in mind.</p>
     </div>
     <div class="card">
       <h3>Social Media Design</h3>
-      <p>Custom visuals, templates, and campaign graphics tailored for Instagram, Facebook, LinkedIn, and more.</p>
+      <p>Scroll-stopping post designs, reels, and branded templates for Instagram, TikTok, Facebook, and more.</p>
     </div>
     <div class="card">
-      <h3>Print Design</h3>
-      <p>Posters, flyers, business cards, brochures, and packaging—everything ready for high-quality print production.</p>
+      <h3>Print & Packaging</h3>
+      <p>High-quality layout design for posters, business cards, brochures, product packaging, and other print-ready materials.</p>
     </div>
     <div class="card">
       <h3>Presentation Design</h3>
-      <p>Branded PowerPoint, Keynote, and PDF decks that communicate your ideas clearly and visually.</p>
+      <p>Professional pitch decks, corporate presentations, and infographics that clearly communicate your message with style.</p>
     </div>
     <div class="card">
-      <h3>Motion Graphics</h3>
-      <p>Animated visuals, logo reveals, and explainer videos that add energy and clarity to your content.</p>
+      <h3>Motion Design</h3>
+      <p>Dynamic animations, logo reveals, UI transitions, and visual storytelling through animated graphics.</p>
+    </div>
+    <div class="card">
+      <h3>Visual Effects (VFX)</h3>
+      <p>Advanced compositing, particle simulations, cinematic effects, and post-production for film, video, and digital content.</p>
+    </div>
+    <div class="card">
+      <h3>3D Design</h3>
+      <p>3D modeling, product visualization, environments, and animations for brands, games, and promotional visuals.</p>
+    </div>
+    <div class="card">
+      <h3>Art Direction</h3>
+      <p>Concept development, moodboards, and visual storytelling to ensure brand consistency across campaigns and platforms.</p>
     </div>
   </div>
 </section>
